[project]
name = "maisi"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "tqdm",
  "wheel-stub",
  "simpleitk",
  "nibabel",
  "ultralytics-thop",
  "accelerate",
  "torchmetrics",
  "transformers[torch]",
  "monai[all]",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }