[project]
name = "maisi"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "parameterized",
  "torch",
  "torchvision",
  "numpy",
  "tqdm",
  "wheel-stub",
  "simpleitk",
  "nibabel",
  "ultralytics-thop",
  "accelerate",
  "torchmetrics",
  "transformers[torch]",
  "monai[all]",
  "focal-frequency-loss"
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
