[project]
name = "maisi"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "parameterized",
  "torch",
  "torchvision",
  "numpy",
  "tqdm",
  "wheel-stub",
  "simpleitk",
  "nibabel",
  "ultralytics-thop",
  "accelerate",
  "torchmetrics",
  "transformers[torch]",
  "monai[all]",
  "focal-frequency-loss",
  "flash-linear-attention"
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
